bk_ida/sjengida/c0/extended_in_check
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/extended_in_check/src/moves.c:1724:12: error: use of undeclared identifier 'extended_in_check_knight_o'
if ( board[extended_in_check_knight_o[sqh] + wking_loc] == 4 ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/extended_in_check/src/moves.c:1762:12: error: use of undeclared identifier 'extended_in_check_knight_o'
if ( board[extended_in_check_knight_o[sqq] + bking_loc] == 3 ) 
           ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/extended_in_check/src/obj/moves.o] Error 1
